# CompilerConstructionSS2019

./: CMakeLists.txt  README.md  evaluation_scheme.md  example_input.md  specification.md  submission.md
examples/fem/: fem.mc
examples/leibniz_pi/: leibniz_pi.mc
examples/lucas_number/: lucas_number.mc
examples/mandelbrot/: mandelbrot.mc
examples/number_guessing/: number_guessing.mc
examples/prime/: prime.mc
examples/sorting_network/: sorting_network.mc
examples/taylor/: taylor.mc
images/: cfg.dot
mcc/: README.md  build-project.sh  meson.build  sources_used.txt
mcc/app/: mc_ast_to_dot.c  mc_print_symbol.c  mc_print_symbol_table.c  mc_type_check_trace.c  mcc.c
mcc/include/: parser.h
mcc/include/mcc/: ast.h  ast_print.h  ast_visit.h  dynamic_array.h  mcc_scope.h  parser.h  printer.h  symbol_table.h  symbol_table_parse.h  symbol_table_print.h  symbol_table_semantic_error.h  symbol_table_validate.h  tac_build.h
mcc/scripts/: build-and-test.sh  build-project.sh  run-ninja-test.sh  run_integration_tests
mcc/scripts/integration_tests/: binary_search.mcc.stats.txt  bubble_sort.mcc.stats.txt  empty.mcc.stats.txt  fem.mcc.stats.txt  fib.mcc.stats.txt  leap_year.mcc.stats.txt  lucas_number.mcc.stats.txt  mandelbrot.mcc.stats.txt  number_guessing.mcc.stats.txt  sorting_network.mcc.stats.txt  subset_sum.mcc.stats.txt
mcc/src/: ast.c  ast_print.c  ast_visit.c  parser.c  parser.y  scanner.l  symbol_table.c  symbol_table_parse.c  symbol_table_print.c  symbol_table_semantic_error.c  symbol_table_validate.c  tac_build.c
mcc/test-files/: test.mcc
(+27 files in other folders)
